--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,15 +9,19 @@ crate-type = ["cdylib", "staticlib"]
 [dependencies]
 opencv = { version = "0.96.0", features = ["clang-runtime"] }
 base64 = "0.22.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+anyhow = "1.0"
 
 [target.'cfg(target_os = "android")'.dependencies]
 opencv = { version = "0.96.0", features = ["clang-runtime"] }
 
 [target.'cfg(target_os = "ios")'.dependencies]
-opencv = { version = "0.96.0" }
+opencv = { version = "0.96.0", features = ["clang-runtime"] }
 
 [profile.release]
 lto = true
 codegen-units = 1
 panic = "abort"
 strip = true
+
